--- a/simp_chinese/lv_events_l_simp_chinese.yml
+++ b/simp_chinese/lv_events_l_simp_chinese.yml
@@ -125,40 +125,40 @@ lv_sexy_planet.1.name: "有趣In Heat"
 lv_sexy_planet.1.desc: "所有为生命搜索做的努力都证明是徒劳的。甚至在§Y[From.GetName]§!的地表搜索也没有任何结果。\n\n似乎我们没有必要如此努力地搜索，因为我们的一名女飞行员在从星球表面返回时在她的调查船上发现了该生命。"
 lv_sexy_planet.1.a: "令人不安但又迷人。"
 
-lv_sexy_planet.2.name: "The Swarm"
-lv_sexy_planet.2.desc: "Upon touching down on the surface of  §Y[From.GetName]§! our survey team was immediately beset upon by a creature with an insatiable sex drive. The males of the survey team could do little more than watch as the creature stripped the clothes of the female members and penetrated all of their holes with its tentacles, not letting them go until it had fully filled them with its seed."
-lv_sexy_planet.2.a: "Disturbing, yet fascinating."
-lv_sexy_planet.2.b: "These vile creatures will make good test subjects for our latest weapons."
-lv_sexy_planet.2.c: "The women clearly enjoyed the experience."
+lv_sexy_planet.2.name: "虫群"
+lv_sexy_planet.2.desc: "当降落§Y[From.GetName]§!表面时，我们的调查小组随即被一个无法满足性欲的生物所困扰。这个生物剥去了调查小组所有女性成员的衣服，用触手插入了她们身上的每一个洞，直到它把种子注满了她们的身体的每一个洞才满意的离开，调查小组的男性都看傻了眼。"
+lv_sexy_planet.2.a: "令人不安又迷人。"
+lv_sexy_planet.2.b: "这些邪恶的生物会成为我们最新武器的好靶子。"
+lv_sexy_planet.2.c: "她们显然很享受这种体验。"
  
-lv_sexy_planet_hard_category: "Something Lurks Here"
-lv_sexy_planet_hard_category_desc: "The crew believes it may have detected signs of a strange lifeform on §Y[From.GetName]§!, but whatever it is it has proven itself to be immensely hard to track."
+lv_sexy_planet_hard_category: "有东西潜伏在这里"
+lv_sexy_planet_hard_category_desc: "机组人员认为它可能已经在§Y[From.GetName]§!上发现了奇怪的生命形态的迹象，但无论是什么，它已经证明自己非常难以追踪。"
  
-lv_sexy_planet_hard.1.name: "The Xeno Terror"
-lv_sexy_planet_hard.1.desc: "The crew managed to find the lifeform. Well... perhaps it would be more accurate to say that it found them. §G[Root.GetLeaderName]§! still isn't sure what sort of creature this lifeform is, but he says with some confident that it was bio-engineered. Whatever it is, the 'Xeno Terror' as the crew calls it, seems to have a strong attraction to the females of our species."
-lv_sexy_planet_hard.1.a: "Truly Horrifying"
-lv_sexy_planet_hard.1.b: "This is why no one important is sent on these missions."
-lv_sexy_planet_hard.1.c: "Nope! Nope! Nope!"
-lv_sexy_planet_hard.1.d: "Learn what we can then nuke the site from orbit."
+lv_sexy_planet_hard.1.name: "恐怖异形The Xeno Terror"
+lv_sexy_planet_hard.1.desc: "船员设法找到了这种生命形态。嗯......也许说是它找到他们会更准确。§G[Root.GetLeaderName]§!仍不确定这种生命形式是什么样的生物，但他有些自信地说它是传统定义上的生物。无论是什么，正如船员称之为'Xeno Terror'一样，它似乎对我们物种的雌性具有强大的吸引力。"
+lv_sexy_planet_hard.1.a: "真可怕"
+lv_sexy_planet_hard.1.b: "这就是为什么没有任何重要的人被派去执行这些任务。This is why no one important is sent on these missions."
+lv_sexy_planet_hard.1.c: "不！不！不！"
+lv_sexy_planet_hard.1.d: "对该地点实施轨道核打击。Learn what we can then nuke the site from orbit."
  
 lv_nuclear_sex_category: "Life on a Ruined World"
-lv_nuclear_sex_category_desc: "The crew has detected lifeforms on the surface of §Y[From.GetName]§! despite the planet having been ruined by a nuclear conflict. Trying to find these lifeforms from orbit has proven frustrating at best, as the lifeforms are being shielded from our sensors by the various ruins on the planet's surface. §G[Root.GetLeaderName]§! has suggested sending a team to the surface to further investigate."
-lv_nuclear_sex.1.name: "Nuclear Sex"
-lv_nuclear_sex.1.desc: "The survey team hadn't been on the surface long before one of the lifeforms made contact with an isolated member of the team. Upon arriving at the scene the other survey members found the woman with her hazard suit completely torn off. Recordings of the incident indicate that the sexual act the xeno was performing on the woman probably would have been quite enjoyable for her if she wasn't receiving a lethal dose of radiation."
-lv_nuclear_sex.1.a: "Let's keep quiet about this incident."
-lv_nuclear_sex.1.b: "Make the recordings of the act public so we can learn as much as we can."
-lv_nuclear_sex.1.c: "Our scientist suffered a tragic, but unintended fate."
+lv_nuclear_sex_category_desc: "机组检测到§Y[From.GetName]§!表面的生命形态，尽管这个星球已经被核冲突破坏。试图从轨道上寻找这些生命形态已经被证明是无效的，因为我们的传感器被星球表面上的各种废墟所干扰。§G[Root.GetLeaderName]§!建议派团队到地面进一步调查。"
+lv_nuclear_sex.1.name: "辐射性爱N"
+lv_nuclear_sex.1.desc: "在调查小组还没有降落地表的很久之前，这种生命形式就已经与团队中一个成员在星球上进行了接触。当到达地表后，调查成员发现她的防护服已经被完全撕掉了。事件的记录表明，如果没有致命剂量的辐射，那么与该异种性性交对女性来说可能非常愉快。"
+lv_nuclear_sex.1.a: "我们应该封锁对此事件。"
+lv_nuclear_sex.1.b: "将行动记录公之于众，以便我们尽可能多地学习。"
+lv_nuclear_sex.1.c: "我们的科学家命运真是意外又悲惨的。Our scientist suffered a tragic, but unintended fate."
  
-lv_potential_colony_site_category: "Potential Colony Site"
-lv_potential_colony_site_category_desc: "[Root.GetLeaderName] claims to find a site on §Y[From.GetName]§! that would be perfect for a new colony."
-lv_sexy_planet.3.name: "Tentacled Lifeforms Abound"
-lv_sexy_planet.3.desc: "At first the site on §Y[From.GetName]§! did indeed seem perfect. The survey team was in the process of determining the best spot for a future administrative building when one of the team's females was suddenly pulled into a hole in the ground. She cried out as tendril-like appendages wrapped themselves around her and forced their way into her. §G[Root.GetLeaderName]§! informs us that the planet is home to numerous other 'tentacle lifeforms'."
-lv_sexy_planet.3.a: "Besides that its still a good site for a colony, right?"
-lv_sexy_planet.3.b: "Gather as much data as we can about these fascinating lifeforms."
-lv_sexy_planet.3.c: "Eradicate it! We won't tolerate the presence of these creatures."
+lv_potential_colony_site_category: "潜在的殖民地"
+lv_potential_colony_site_category_desc: "§G[Root.GetLeaderName]§!声称在§Y[From.GetName]§!上找到一处适合建立殖民地的完美地点。"
+lv_sexy_planet.3.name: "大量触手生物"
+lv_sexy_planet.3.desc: "§Y[From.GetName]§!上的地点，看起来确实很完美。调查小组正在规划未来行政大楼的最佳位置，这时该队的女性突然被拉入地下洞穴。当她们被触手缠绕强行拖入时，她们哭了出来。§G[Root.GetLeaderName]§!告诉我们这个星球是许多'触手生命形式'的家园。 "
+lv_sexy_planet.3.a: "除此之外，它仍然是殖民地的好地方，不是吗？"
+lv_sexy_planet.3.b: "尽可能多的收集关于这些迷人生命的数据。"
+lv_sexy_planet.3.c: "肃清它们！我们绝不能容忍这些生物的存在。"
  
-lv_slime_asteroid_category: "The Slime"
-lv_slime_asteroid_category_desc: "The crew of §B[Root.GetFleetName]§! has reported catching sight of some kind of slime-like entity on a nearby asteroid. §G[Root.GetLeaderName]§! has recommended we collect a sample for further research."
+lv_slime_asteroid_category: "史莱姆"
+lv_slime_asteroid_category_desc: "据§B[Root.GetFleetName]§!的机组人员报道，在附近的小行星上捕捉到某种粘液样子的实体的踪迹。§G[Root.GetLeaderName]§!建议我们收集样本进行进一步研究。"
  
 lv_slime_asteroid.1.name: "Raunchy Slime"
 lv_slime_asteroid.1.desc: "The slime entity was easily located and brought aboard the §B[Root.GetFleetName]§!. §G[Root.GetLeaderName]§! wasn't sure if it was even alive or not until it broke free and attempted to mate with a female scientist."
